ART 2.4.1
* Support for bubble charts
* Fix for chart tooltips not displaying when charts displayed inline
* Fix for issue preventing creation/modification of parameters in IE
* Fix for charts not displaying in IE8 when charts displayed inline
* Fix for charts not displaying when y axis range is specified

ART 2.4
* Added cc and bcc fields for email jobs
* Allow change of parameter between inline and multi
* Use logback instead of log4j for error logging
* Enable viewing of application logs from within the application
* Enable choosing of query datasource at runtime
* Display query results in the show parameters page 
* Allow modification of column attached to a rule
* Enable display of final sql generated for a query
* Enable setting of the format to be used for dates in query output
* Added All option for datatable output
* Improved handling of numeric rule values
* Sort numeric columns correctly in datatable view mode
* Made DataTable the default view mode
* Allow to see who job is currently shared with
* Enable jobs to be emailed to a dynamic list of people
* Allow rule values to be defined for user groups

ART 2.3.1
* Fix NullPointerException on pdf output with null strings
* Fix to enable error free charts with java 1.7
* Increased axis labels remove_at value for charts
* Fix to enable display of friendly parameter values for chained parameters
* Modified string for chained multi parameter, all values, from ":: All items" to "All"
* Fix for error on selecting all values option for chained multi parameter
* Removed check enforcing presence of parameter label in the sql source

ART 2.3
* Added database type drop down field to help populate common jdbc details
* Allow username and password field values to be used for CUBRID database
* Allow blank passwords for datasources
* Allow "not equals" operator for dynamic queries
* Support display of unicode characters in pdf output and charts
* Enable display of graph parameters and data in pdf output