@@ -19,6 +19,7 @@
 
 -- ---- DROP TABLES ----
 
+
 -- DROP TABLE ART_SETTINGS;
 -- DROP TABLE ART_ADMIN_PRIVILEGES;
 -- DROP TABLE ART_USER_QUERIES;
@@ -48,7 +49,11 @@
 -- DROP TABLE ART_DATABASES;
 -- DROP TABLE ART_USERS;
 
+
 -- ---- DROP TABLES ----
+
+
+-- ------------------------------------------------
 
 
 -- ART_SETTINGS
@@ -170,7 +175,7 @@ ALTER TABLE ART_QUERIES ADD CONSTRAINT art_queries_uc_name UNIQUE (NAME);
 
 CREATE TABLE ART_ADMIN_PRIVILEGES
 (
-	USERNAME    VARCHAR(15) NOT NULL,
+	USERNAME    VARCHAR(30) NOT NULL,
 	PRIVILEGE   VARCHAR(4) NOT NULL,
 	VALUE_ID    INTEGER NOT NULL,
 	PRIMARY KEY(USERNAME,PRIVILEGE,VALUE_ID)	
@@ -182,7 +187,7 @@ CREATE TABLE ART_ADMIN_PRIVILEGES
 
 CREATE TABLE ART_USER_QUERIES
 (
-	USERNAME    VARCHAR(15) NOT NULL,
+	USERNAME    VARCHAR(30) NOT NULL,
 	QUERY_ID    INTEGER     NOT NULL,  
 	UPDATE_DATE  DATE,  
 	PRIMARY KEY(USERNAME,QUERY_ID)	
@@ -194,7 +199,7 @@ CREATE TABLE ART_USER_QUERIES
 
 CREATE TABLE ART_USER_QUERY_GROUPS
 (
-	USERNAME       VARCHAR(15) NOT NULL,
+	USERNAME       VARCHAR(30) NOT NULL,
 	QUERY_GROUP_ID INTEGER     NOT NULL,        
 	PRIMARY KEY(USERNAME,QUERY_GROUP_ID)	
 );
@@ -275,7 +280,7 @@ CREATE TABLE ART_QUERY_RULES
  
 CREATE TABLE ART_USER_RULES
 (  
-	USERNAME          VARCHAR(15)   NOT NULL,
+	USERNAME          VARCHAR(30)   NOT NULL,
 	RULE_NAME         VARCHAR(15)   NOT NULL, 
 	RULE_VALUE        VARCHAR(25)   NOT NULL,
 	RULE_TYPE		  VARCHAR(6)	
@@ -309,7 +314,7 @@ CREATE TABLE ART_JOBS
 	JOB_ID            INTEGER NOT NULL PRIMARY KEY,
 	JOB_NAME VARCHAR(50),
 	QUERY_ID	    INTEGER NOT NULL,
-	USERNAME          VARCHAR(15) NOT NULL,
+	USERNAME          VARCHAR(30) NOT NULL,
 	OUTPUT_FORMAT            VARCHAR(15) NOT NULL, 
 	JOB_TYPE		    INTEGER NOT NULL,      
 	JOB_MINUTE	    VARCHAR(100),               
@@ -364,7 +369,7 @@ CREATE TABLE ART_JOBS_PARAMETERS
 CREATE TABLE ART_JOBS_AUDIT
 (
 	JOB_ID            INTEGER NOT NULL,
-	USERNAME VARCHAR(15),
+	USERNAME VARCHAR(30),
 	JOB_AUDIT_KEY VARCHAR(100),
 	JOB_ACTION   VARCHAR(1),             
 	START_DATE TIMESTAMP NULL,
@@ -383,7 +388,7 @@ CREATE TABLE ART_JOBS_AUDIT
 CREATE TABLE ART_LOGS
 (
 	UPDATE_TIME TIMESTAMP NOT NULL,
-	USERNAME    VARCHAR(15) NOT NULL,
+	USERNAME    VARCHAR(30) NOT NULL,
 	LOG_TYPE        VARCHAR(15) NOT NULL, 
 	IP          VARCHAR(15), 
 	OBJECT_ID   INTEGER,
@@ -399,7 +404,7 @@ CREATE TABLE ART_LOGS
 CREATE TABLE ART_SHARED_JOBS
 (
 	JOB_ID INTEGER NOT NULL,
-	USERNAME VARCHAR(15) NOT NULL,
+	USERNAME VARCHAR(30) NOT NULL,
 	USER_GROUP_ID INTEGER,
 	LAST_FILE_NAME VARCHAR(4000),
 	LAST_START_DATE TIMESTAMP NULL,
@@ -441,7 +446,7 @@ ALTER TABLE ART_USER_GROUPS ADD CONSTRAINT art_user_groups_uc_name UNIQUE (NAME)
 
 CREATE TABLE ART_USER_GROUP_ASSIGNMENT
 (
-	USERNAME VARCHAR(15) NOT NULL,
+	USERNAME VARCHAR(30) NOT NULL,
 	USER_GROUP_ID INTEGER NOT NULL,
 	PRIMARY KEY (USERNAME,USER_GROUP_ID)	
 );
