@@ -143,7 +143,7 @@ INSERT INTO ART_QUERIES VALUES(1,21,'Load Test-Big','56k','A  missed join  cause
 INSERT INTO ART_QUERIES VALUES(1,22,'Load Test-Huge','224k rows','A couple of missed joins causes this query to retrieve 224k rows',1,'2011-01-25','','','','','A couple of missed joins causes this query to retrieve 224k rows',NULL,NULL,0,'','A','N',NULL,NULL,NULL)
 INSERT INTO ART_QUERIES VALUES(3,23,'5b. Drill-Pie','Drill Down from Pie Chart','Shows details when clicking on pie chart',1,'2011-03-31','','','','','Shows a pie chart with sold items in the selected region and specified period',NULL,NULL,0,'','A','N',NULL,NULL,NULL)
 INSERT INTO ART_QUERIES VALUES(1,24,'Test UTF-8','Shows all orders for a city in a period','This query is to validate Art correctly\u000d\u000a recognize UTF-8 chars as parameters',1,'2011-03-31','','','','','A  missed join  causes this query to retrieve 56k rows',NULL,NULL,0,'','A','N',NULL,NULL,NULL)
-INSERT INTO ART_QUERIES VALUES(1,25,'10.All Orders','','',1,'2012-11-22','','','','','','','',0,'','A','N','','','N')
+INSERT INTO ART_QUERIES VALUES(1,25,'All Orders','','Test query on sample db',1,'2012-11-24','','','','','','','',0,'','A','N','','','N')
 INSERT INTO ART_QUERIES VALUES(4,26,'Cities Table','','',1,'2012-11-18','','','','','','','',0,'','A','N','','','N')
 INSERT INTO ART_QUERIES VALUES(4,27,'Items Table','','',1,'2012-11-18','','','','','','','',0,'','A','N','','','N')
 INSERT INTO ART_QUERIES VALUES(4,28,'Regions Table','','',1,'2012-11-18','','','','','','','',0,'','A','N','','','N')
@@ -153,12 +153,12 @@ INSERT INTO ART_QUERIES VALUES(3,31,'Sample Orders','','Query with a few orders 
 INSERT INTO ART_QUERIES VALUES(3,32,'Recipients','','Query used to define details of email recipients for a job',1,'2012-11-18','','','','','','','',121,'','A','N','','','N')
 INSERT INTO ART_QUERIES VALUES(3,33,'Recipients - filtered','','Query used to define details of email recipients for a job. For filtered output. For use with sample orders query.',1,'2012-11-18','','','','','','','',121,'','A','N','','','N')
 INSERT INTO ART_QUERIES VALUES(3,34,'Recipients - email only','','Query used to define details of email recipients for a job',1,'2012-11-22','','','','','','','',121,'','A','N','','','N')
-INSERT INTO ART_QUERIES VALUES(3,35,'Sample JasperReport 1','','Using template query',1,'2012-11-23','sample-jasper1.jrxml','','','','','','',115,'','A','N','','','N')
-INSERT INTO ART_QUERIES VALUES(3,36,'Sample JasperReport 2','','Using ART query',1,'2012-11-23','sample-jasper1.jrxml','','','','','','',116,'','A','N','','','N')
-INSERT INTO ART_QUERIES VALUES(3,37,'Sample jXLS 1','','Using template query',1,'2012-11-23','sample-jxls1.xlsx','','','','','','',117,'','A','N','','','N')
-INSERT INTO ART_QUERIES VALUES(3,38,'Sample jXLS 2','','Using ART query',1,'2012-11-23','sample-jxls2.xlsx','','','','','','',118,'','A','N','','','N')
-INSERT INTO ART_QUERIES VALUES(3,39,'Sample jXLS 3','','Chart included in template',1,'2012-11-23','sample-jxls3.xlsx','','','','','','',118,'','A','N','','','N')
-INSERT INTO ART_QUERIES VALUES(3,40,'Sample jXLS 4','','Template with multiple reports in different worksheets.',1,'2012-11-23','sample-jxls4.xls','','','','','','',117,'','A','N','','','N')
+INSERT INTO ART_QUERIES VALUES(3,35,'Jasper 1','','Using template query',1,'2012-11-24','sample-jasper1.jrxml','','','','','','',115,'','A','N','','','N')
+INSERT INTO ART_QUERIES VALUES(3,36,'Jasper 2','','Using ART query',1,'2012-11-24','sample-jasper1.jrxml','','','','','','',116,'','A','N','','','N')
+INSERT INTO ART_QUERIES VALUES(3,37,'jXLS 1','','Using template query',1,'2012-11-24','sample-jxls1.xlsx','','','','','','',117,'','A','N','','','N')
+INSERT INTO ART_QUERIES VALUES(3,38,'jXLS 2','','Using ART query',1,'2012-11-24','sample-jxls2.xlsx','','','','','','',118,'','A','N','','','N')
+INSERT INTO ART_QUERIES VALUES(3,39,'jXLS 3','','Chart included in template',1,'2012-11-24','sample-jxls3.xlsx','','','','','','',118,'','A','N','','','N')
+INSERT INTO ART_QUERIES VALUES(3,40,'jXLS 4','','Template with multiple reports in different worksheets.',1,'2012-11-24','sample-jxls4.xls','','','','','','',117,'','A','N','','','N')
 INSERT INTO ART_QUERY_FIELDS VALUES(6,1,'Region','Select Region','Select one item from the list','',NULL,NULL,'2011-01-19',0,-1,'Y','I','regionId','N',4,-1,'VARCHAR')
 INSERT INTO ART_QUERY_FIELDS VALUES(6,2,'From','From Date','Pick a date by clicking on the calendar icon','2010-01-01',NULL,NULL,'2011-01-19',0,-1,'N','I','startDate','N',4,-1,'DATE')
 INSERT INTO ART_QUERY_FIELDS VALUES(6,3,'To','To Date','Pick a date by clicking on the calendar icon','',NULL,NULL,'2011-01-19',0,-1,'N','I','endDate','N',4,-1,'DATE')
