@@ -4,7 +4,7 @@
  <meta http-equiv="pragma" content="no-cache">
  <meta http-equiv="cache-control" content="no-cache, must-revalidate">
  <link rel="stylesheet" type="text/css" href="<%= request.getContextPath() %>/css/art.css">
- <title>ART - Admin</title>
+ <title>ART</title>
  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 </head>
 <body>
