@@ -5,6 +5,8 @@
 <%	
  java.util.ResourceBundle messages = java.util.ResourceBundle.getBundle("art.i18n.ArtMessages",request.getLocale());
  art.utils.UserEntity ue2 = (art.utils.UserEntity) session.getAttribute("ue");
+ int accessLevel=ue2.getAdminLevel();
+ String username=ue2.getUsername();
 %>
 
 
@@ -48,23 +50,23 @@
 </head>
 <body>
  <c:if test="${empty param._mobile}">  
- <% if ( !(ue2.getUsername().equals("public_user") && art.servlets.ArtDBCP.getArtSetting("header_with_public_user").equals("no") )  ) { %>
+ <% if ( !(username.equals("public_user") && art.servlets.ArtDBCP.getArtSetting("header_with_public_user").equals("no") )  ) { %>
    <table width="100%"  class="art" cellpadding="0" cellspacing="0">
     <tr>
      <td class="attr" align="left" width="50%">
-      <% if (ue2.getAdminLevel() > 5) {%>
+      <% if (accessLevel > 5) {%>
        &nbsp;<a href="<%= request.getContextPath() %>/admin/adminConsole.jsp" ><img src="<%= request.getContextPath() %>/images/admin.png" title="Admin Console" border="0" /></a> ::
       <% } %>
 
        <a href="<%= request.getContextPath() %>/user/showGroups.jsp"><img src="<%= request.getContextPath() %>/images/back-home.png" title="<%=messages.getString("startLink")%>" border="0" /></a> 
 
-      <% if (ue2.getAdminLevel() >= 5) {%>
+      <% if (accessLevel >= 5) {%>
       :: <a href="<%= request.getContextPath() %>/user/myJobs.jsp" ><img src="<%= request.getContextPath() %>/images/jobs.png" title="<%=messages.getString("myJobsLink")%>" border="0" /></a>
       <% } %>
 	  
 	  :: <a href="<%= request.getContextPath() %>/user/sharedJobs.jsp"> <img src="<%= request.getContextPath() %>/images/shared-jobs.png" title="<%=messages.getString("sharedJobsLink")%>" border="0" /></a>
 	  
-	  <% if (ue2.getAdminLevel() == 100) {%>
+	  <% if (accessLevel == 100) {%>
       :: <a href="<%= request.getContextPath() %>/logs" ><img src="<%= request.getContextPath() %>/images/logs.png" title="<%=messages.getString("logsLink")%>" border="0" /></a>
       <% } %>
 
@@ -75,7 +77,7 @@
 
       <img src="<%= request.getContextPath() %>/images/vertical_16px.gif" />
 
-	<%= ue2.getUsername()%>
+	<%= username%>
 	:: <%=messages.getString("loggedAt")%> <%=java.text.DateFormat.getTimeInstance(java.text.DateFormat.SHORT,request.getLocale()).format(ue2.getLoginDate())%>
      </td>
     </tr>
