@@ -4,6 +4,7 @@ ART 2.4.1
 * Fix for issue preventing creation/modification of parameters in IE
 * Fix for charts not displaying in IE8 when charts displayed inline
 * Fix for charts not displaying when y axis range is specified
+* Have admin pages use the same header and footer contents as user pages
 
 ART 2.4
 * Added cc and bcc fields for email jobs
